# modumb

./: .gitignore  CLAUDE.md  DEBUGGING_JOURNEY.md  ISSUES.md  Jenkinsfile  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
docs/: JENKINS_SETUP.md  WINDOWS_TESTING.md  WSL2_SETUP.md
scripts/: analyze_wav.py  diag_modem_exchange.py  diag_vac_degradation.py  diag_vac_degradation2.py  diag_vac_frame.py  diag_vbcable_frame.py  download_artifact.ps1  fetch_jenkins.ps1  list_dell_devices.py  list_devices.py  run-loopback-test.sh  setup-test-repo.sh  test-audio-loopback.sh  test-real-audio.ps1  test_audio_formats.py  test_data_frame.py  test_dell_audio.py  test_dell_directsound.py  test_dell_quick.py  test_dft_debug.py  test_dft_trim.py  test_e2e_vac.py  test_e2e_vbcable.py  test_envelope_approach.py  test_frame_audio.py  test_freq_analysis.py  test_hdmi_wakeup.py  test_modem_real_audio.py  test_pygame_audio.py  test_pygame_only.py  test_sample_rate_fix.py  test_two_process.py  test_winsound.py  vac_lock.py  vbcable_receiver.py  vbcable_sender.py
src/modumb/: __init__.py  cli.py
src/modumb/datalink/: __init__.py  frame.py  framer.py
src/modumb/git/: __init__.py  remote_helper.py  smart_http.py
src/modumb/http/: __init__.py  client.py  pktline.py  server.py
src/modumb/modem/: __init__.py  afsk.py  audio_io.py  modem.py  profiles.py
src/modumb/proxy/: __init__.py  config.py  local_proxy.py  remote_proxy.py  tunnel.py
src/modumb/transport/: __init__.py  reliable.py  session.py
tests/: __init__.py  test_afsk.py  test_frame.py  test_framer.py  test_pktline.py  test_profiles.py  test_proxy.py  test_tunnel.py  test_vac_lock.py
